--- a/Pages/config/config.html
+++ b/Pages/config/config.html
@@ -277,14 +277,14 @@ risu-btn='kingPenis'><strong>페니스: </strong>{{dict_element::{{getvar::king}
 <div class="two-cells" risu-btn="showLog">
 <label><b>로그 표시</b></label>
 <label class="switch">
-<input type="checkbox" name="showLog" {{#when::showLog::vis::visible}}checked{{/when}}>
+<input type="checkbox" name="showLog" {{#when::showLog::vis::block}}checked{{/when}}>
 <span class="slider"></span>
 </label>
 
-{{#when::showLog::vis::hidden}}
+{{#when::showLog::vis::none}}
 <p class="setting-description">조교 및 전투 로그를 숨깁니다.</p>
 {{/when}}
-{{#when::showLog::vis::visible}}
+{{#when::showLog::vis::block}}
 <p class="setting-description">조교 및 전투 로그를 보여줍니다.</p>
 {{/when}}
 </div>
