--- a/Pages/dictionary/dictionary.html
+++ b/Pages/dictionary/dictionary.html
@@ -138,7 +138,7 @@ grid-column: 1 / -1;
 <div class="command-container">
 {{#when::category::vis::d_abl}}
 {{#each {{getvar::ablList}} item}}
-<div class="btn command-btn" risu-btn="dict_abl_{{slot::item}}">{{slot::item}}</div>
+<div class="btn command-btn" risu-btn="dictSelect.sys_abl_{{slot::item}}">{{slot::item}}</div>
 {{/each}}
 {{/when}}
 
@@ -153,47 +153,47 @@ grid-column: 1 / -1;
 {{#when::dictSub::vis::성격}}
 <div class="btn command-btn back-btn" risu-btn="d_back_trait">⬅ 목록으로</div>
 {{#each {{getvar::성격List}} item}}
-<div class="btn command-btn" risu-btn="dict_trait_{{slot::item}}">{{slot::item}}</div>
+<div class="btn command-btn" risu-btn="dictSelect.sys_trait_{{slot::item}}">{{slot::item}}</div>
 {{/each}}
 {{/when}}
 
 {{#when::dictSub::vis::신체특성}}
 <div class="btn command-btn back-btn" risu-btn="d_back_trait">⬅ 목록으로</div>
 {{#each {{getvar::신체특성List}} item}}
-<div class="btn command-btn" risu-btn="dict_trait_{{slot::item}}">{{slot::item}}</div>
+<div class="btn command-btn" risu-btn="dictSelect.sys_trait_{{slot::item}}">{{slot::item}}</div>
 {{/each}}
 {{/when}}
 
 {{#when::dictSub::vis::성적취향}}
 <div class="btn command-btn back-btn" risu-btn="d_back_trait">⬅ 목록으로</div>
 {{#each {{getvar::성적취향List}} item}}
-<div class="btn command-btn" risu-btn="dict_trait_{{slot::item}}">{{slot::item}}</div>
+<div class="btn command-btn" risu-btn="dictSelect.sys_trait_{{slot::item}}">{{slot::item}}</div>
 {{/each}}
 {{/when}}
 
 {{#when::dictSub::vis::칭호}}
 <div class="btn command-btn back-btn" risu-btn="d_back_trait">⬅ 목록으로</div>
 {{#each {{getvar::칭호List}} item}}
-<div class="btn command-btn" risu-btn="dict_trait_{{slot::item}}">{{slot::item}}</div>
+<div class="btn command-btn" risu-btn="dictSelect.sys_trait_{{slot::item}}">{{slot::item}}</div>
 {{/each}}
 {{/when}}
 {{/when}}
 
 {{#when::category::vis::d_mark}}
 {{#each {{getvar::markList}} item}}
-<div class="btn command-btn" risu-btn="dict_mark_{{slot::item}}">{{slot::item}}</div>
+<div class="btn command-btn" risu-btn="dictSelect.sys_mark_{{slot::item}}">{{slot::item}}</div>
 {{/each}}
 {{/when}}
 
 {{#when::category::vis::d_trace}}
 {{#each {{getvar::traceList}} item}}
-<div class="btn command-btn" risu-btn="dict_trace_{{slot::item}}">{{slot::item}}</div>
+<div class="btn command-btn" risu-btn="dictSelect.sys_trace_{{slot::item}}">{{slot::item}}</div>
 {{/each}}
 {{/when}}
 
 {{#when::category::vis::d_stat}}
 {{#each {{getvar::statList}} item}}
-<div class="btn command-btn" risu-btn="dict_stat_{{slot::item}}">{{slot::item}}</div>
+<div class="btn command-btn" risu-btn="dictSelect.sys_stat_{{slot::item}}">{{slot::item}}</div>
 {{/each}}
 {{/when}}
 
