--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -265,7 +265,7 @@
 <main>
 <section class="character-profile">
 <div class="profile-main">
-<div class="character-portrait"><img src="{{#when::{{dict_element::{{getvar::target}}::이름}}::is::{{user}}}}{{source::user}}{{:else}}{{raw::{{dict_element::{{getvar::target}}::이름}}.png}}{{/when}}" style="margin:0px;border-radius:1em"></div>
+<div class="character-portrait"><img src="{{#when::{{dict_element::{{getvar::target}}::이름}}::is::{{user}}}}{{source::user}}{{:else}}{{raw::{{dict_element::{{getvar::target}}::이름}}.png}}{{/when}}"></div>
 <div class="profile-details">
 <h2>{{dict_element::{{getvar::target}}::이름}} Lv.{{dict_element::{{getvar::target}}::레벨}}</h2>
 <p><strong>종족:</strong> {{dict_element::{{getvar::target}}::종족}}</p>
